# lpr

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  PLANNING.md  SESSION_LEDGER.md
src/lpr/: __init__.py  cli.py  config.py  consensus.py  daemon.py  detector.py  output.py  pipeline.py  reader.py  stream.py  vehicle.py
tests/: test_components.py
